[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/fonts/Pixeled.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/audio/music/02_merchant_room.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scripts/merchant_room/merchant_room_option.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.88776
margin_top = -1.88773
margin_right = 1.8877
margin_bottom = -1.8877
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Movement Abilities" type="VBoxContainer" parent="."]
margin_left = 284.732
margin_top = 108.568
margin_right = 774.732
margin_bottom = 428.568
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Movement Abilities"]
margin_right = 490.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "LEVEL CLEARED: CHOOSE A NEW UNLOCK"
align = 1

[node name="Option1" type="Button" parent="Movement Abilities"]
margin_top = 50.0
margin_right = 490.0
margin_bottom = 102.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "I"

[node name="Option2" type="Button" parent="Movement Abilities"]
margin_top = 106.0
margin_right = 490.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 1 )
text = "II"

[node name="Option3" type="Button" parent="Movement Abilities"]
margin_top = 162.0
margin_right = 490.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 3 )
text = "III"

[node name="Submit" type="Button" parent="."]
margin_left = 375.0
margin_top = 460.0
margin_right = 675.0
margin_bottom = 512.0
custom_fonts/font = SubResource( 3 )
text = "NEXT LEVEL!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error_Log" type="Label" parent="Submit"]
margin_left = -93.8356
margin_top = 55.3303
margin_right = 396.164
margin_bottom = 101.33
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -4.039
autoplay = true
[connection signal="pressed" from="Submit" to="Movement Abilities" method="_on_Submit_pressed"]
